--- a/app/src/main/res/layout/activity_create_user_credentials.xml
+++ b/app/src/main/res/layout/activity_create_user_credentials.xml
@@ -36,13 +36,13 @@
         tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />
 
     <EditText
-        android:id="@+id/createLastNameTxt2"
+        android:id="@+id/createPassword"
         android:layout_width="372dp"
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/createPassword"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:textColorHint="#C5CAE9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         app:layout_constraintVertical_bias="0.543" />
 
     <EditText
-        android:id="@+id/createFirstNameTxt2"
+        android:id="@+id/createUsername"
         android:layout_width="372dp"
         android:layout_height="48dp"
         android:autofillHints=""
