New UI updates and functionality

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -2,17 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/WeightLoss_style"
+    style="@style/WeightLoss_main_style"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7"
     tools:context=".About">
 
     <Button
         android:id="@+id/aboutMenuBtn"
         android:layout_width="127dp"
         android:layout_height="53dp"
-        android:backgroundTint="#FF018786"
+        android:backgroundTint="#006990"
         android:text="@string/weeklyMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,26 +21,13 @@
         app:layout_constraintVertical_bias="0.957"
         tools:ignore="TextContrastCheck" />
 
-    <ImageView
-        android:id="@+id/loginImgView"
-        android:layout_width="366dp"
-        android:layout_height="80dp"
-        android:contentDescription="@string/loginImageDescription"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.024"
-        app:srcCompat="@drawable/wellness_image" />
-
     <TextView
         android:id="@+id/aboutDescriptionLbl"
-        style="@style/WeightLoss_style"
+        style="@style/WeightLoss_main_style"
         android:layout_width="383dp"
         android:layout_height="175dp"
         android:text="@string/aboutBrookeDesc"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,23 +36,25 @@
 
     <TextView
         android:id="@+id/aboutIntro"
-        style="@style/WeightLoss_style"
-        android:layout_width="178dp"
-        android:layout_height="152dp"
+        style="@style/WeightLoss_main_style"
+        android:layout_width="183dp"
+        android:layout_height="125dp"
         android:text="@string/aboutBrookeIntro"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.862"
+        app:layout_constraintHorizontal_bias="0.855"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.205" />
+        app:layout_constraintVertical_bias="0.227" />
 
     <TextView
         android:id="@+id/aboutHoursHeaderLbl"
-        style="@style/WeightLoss_style"
+        style="@style/WeightLoss_main_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/aboutBrookeTitle"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
@@ -76,11 +64,11 @@
 
     <TextView
         android:id="@+id/aboutHoursScheduleLbl"
-        style="@style/WeightLoss_style"
+        style="@style/WeightLoss_main_style"
         android:layout_width="356dp"
         android:layout_height="111dp"
         android:text="@string/aboutBrookeHours"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
@@ -101,5 +89,18 @@
         app:layout_constraintVertical_bias="0.216"
         app:srcCompat="@mipmap/brooke4"
         tools:ignore="ImageContrastCheck" />
+
+    <ImageView
+        android:id="@+id/loginImgView"
+        android:layout_width="366dp"
+        android:layout_height="80dp"
+        android:contentDescription="@string/loginImageDescription"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024"
+        app:srcCompat="@drawable/wellness_image" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
