--- a/app/src/main/res/layout/activity_create_user_contact_info.xml
+++ b/app/src/main/res/layout/activity_create_user_contact_info.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7"
     tools:context=".CreateUserContactInfo">
 
     <Button
@@ -41,7 +40,7 @@
         android:layout_height="93dp"
         android:text="@string/createGetContactInfo"
         android:textAlignment="center"
-        android:textColor="#F8F5F5"
+        android:textColor="#006990"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,8 +69,8 @@
         android:ems="10"
         android:hint="@string/createStreet"
         android:inputType="textPostalAddress"
-        android:textColor="#F8F5F5"
-        android:textColorHint="#F8F5F5"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
@@ -87,9 +86,9 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="@string/createCity"
-        android:textColor="#FAF6F6"
-        android:textColorHint="#F4F0F0"
+        android:hint="@string/createCity"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
@@ -98,13 +97,13 @@
         app:layout_constraintVertical_bias="0.437" />
 
     <Spinner
-        android:id="@+id/createContactSpinner"
-        android:layout_width="156dp"
+        android:id="@+id/createContactState"
+        android:layout_width="175dp"
         android:layout_height="48dp"
         android:contentDescription="@string/createStateDropDown"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.522" />
@@ -117,7 +116,8 @@
         android:ems="10"
         android:hint="@string/createZip"
         android:inputType="number"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.914"
@@ -146,7 +146,8 @@
         android:hint="@string/createPhone"
         android:inputType="phone"
         android:minHeight="48dp"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -162,7 +163,8 @@
         android:hint="@string/createEmail"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
