--- a/app/src/main/res/layout/activity_create_user_credentials.xml
+++ b/app/src/main/res/layout/activity_create_user_credentials.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7"
     tools:context=".CreateUserCredentials">
 
     <Button
@@ -43,7 +42,8 @@
         android:ems="10"
         android:hint="@string/createPassword"
         android:inputType="textPassword"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
@@ -59,7 +59,8 @@
         android:ems="10"
         android:hint="@string/createUsername"
         android:inputType="textPersonName"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
@@ -73,7 +74,7 @@
         android:layout_height="42dp"
         android:text="@string/createGetCredentials"
         android:textAlignment="center"
-        android:textColor="#F8F5F5"
+        android:textColor="#006990"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
