--- a/app/src/main/res/layout/activity_create_user_name.xml
+++ b/app/src/main/res/layout/activity_create_user_name.xml
@@ -4,18 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7"
     tools:context=".CreateUserName">
 
     <EditText
-        android:id="@+id/createLastNameTxt"
+        android:id="@+id/createUserLastNameTxt"
         android:layout_width="372dp"
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/createLastName"
         android:inputType="textPersonName"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
@@ -27,7 +27,6 @@
         android:id="@+id/createUserCancelBtn"
         android:layout_width="127dp"
         android:layout_height="53dp"
-        android:backgroundTint="#FF018786"
         android:text="@string/createCancel"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +40,6 @@
         android:id="@+id/createUserNameNextBtn"
         android:layout_width="127dp"
         android:layout_height="53dp"
-        android:backgroundTint="#FF018786"
         android:text="@string/createNext"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,7 +68,7 @@
         android:layout_height="42dp"
         android:text="@string/createGetFirstAndLastName"
         android:textAlignment="center"
-        android:textColor="#F8F5F5"
+        android:textColor="#006990"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,18 +78,54 @@
         app:layout_constraintVertical_bias="0.253" />
 
     <EditText
-        android:id="@+id/createFirstNameTxt"
+        android:id="@+id/createUserFirstNameTxt"
         android:layout_width="372dp"
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/createFirstName"
         android:inputType="textPersonName"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.415" />
+
+    <EditText
+        android:id="@+id/createUserBirthTxt"
+        android:layout_width="306dp"
+        android:layout_height="48dp"
+        android:autofillHints="@string/createDate"
+        android:clickable="false"
+        android:cursorVisible="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:ems="10"
+        android:hint="@string/createDate"
+        android:inputType="date"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.152"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.669" />
+
+    <Button
+        android:id="@+id/createUserBirthBtn"
+        android:layout_width="61dp"
+        android:layout_height="66dp"
+        android:contentDescription="@string/createCalendarBtn"
+        app:icon="@drawable/ic_baseline_calendar_month_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.66"
+        tools:ignore="RedundantDescriptionCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
