--- a/app/src/main/res/layout/activity_weekly.xml
+++ b/app/src/main/res/layout/activity_weekly.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7"
     tools:context=".Weekly">
 
     <Button
@@ -66,7 +65,7 @@
         android:text="@string/weeklyNutritionalHeader"
         android:textAlignment="textStart"
         android:textAllCaps="false"
-        android:textColor="#FAF7F7"
+        android:textColor="#006990"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,11 +80,11 @@
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/weeklyProtein"
+        android:hint="@string/weeklyGoalOne"
         android:inputType="textPersonName"
         android:textAllCaps="true"
-        android:textColor="#F8F5F5"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.611"
@@ -99,11 +98,11 @@
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/weeklyGrain"
+        android:hint="@string/weeklyGoalTwo"
         android:inputType="textPersonName"
         android:textAllCaps="true"
-        android:textColor="#F8F5F5"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.611"
@@ -117,11 +116,11 @@
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/weeklyVegetable"
+        android:hint="@string/weeklyGoalThree"
         android:inputType="textPersonName"
         android:textAllCaps="true"
-        android:textColor="#F8F5F5"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.611"
@@ -135,11 +134,11 @@
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/weeklyFruit"
+        android:hint="@string/weeklyGoalFour"
         android:inputType="textPersonName"
         android:textAllCaps="true"
-        android:textColor="#F8F5F5"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.611"
@@ -195,17 +194,18 @@
         android:id="@+id/weeklyDate"
         android:layout_width="379dp"
         android:layout_height="48dp"
+        android:autofillHints=""
         android:ems="10"
         android:hint="@string/weeklyDate"
         android:inputType="date"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.245"
-        android:autofillHints="" />
+        app:layout_constraintVertical_bias="0.245" />
 
     <Spinner
         android:id="@+id/weeklyModeSpinner"
