--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#673AB7"
     tools:context=".Main">
 
     <Button
@@ -30,24 +29,26 @@
         android:hint="@string/loginUsername"
         android:inputType="textPersonName"
         android:textAllCaps="true"
-        android:textColor="#F8F5F5"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.392"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.597" />
+        app:layout_constraintVertical_bias="0.56" />
 
     <TextView
         style="@style/WeightLoss_title"
         android:layout_width="331dp"
         android:layout_height="160dp"
-        android:layout_marginTop="164dp"
+        android:layout_marginTop="172dp"
+        android:fontFamily="@font/gothamnights"
         android:hint="@string/loginUsername"
         android:text="@string/loginWelcome"
         android:textAlignment="center"
-        android:textSize="34sp"
+        android:textColor="#006990"
+        android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -89,13 +90,13 @@
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:textAllCaps="true"
-        android:textColor="#FBFBFB"
-        android:textColorHint="#C5CAE9"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.392"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.723" />
+        app:layout_constraintVertical_bias="0.685" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
