--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#673AB7">
+        android:layout_height="match_parent">
 
         <Button
             android:id="@+id/mainSetGoalsBtn"
@@ -34,7 +33,7 @@
             android:text="@string/mainDynamicName"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="#FAF7F7"
+            android:textColor="#006990"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +62,7 @@
             android:text="@string/mainMotivation"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="#FAF7F7"
+            android:textColor="#006990"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
