--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -4,5 +4,4 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainNavHeader"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#673AB7" />
+    android:layout_height="match_parent" />
