--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,22 +2,26 @@
     <!-- Base application theme. -->
     <style name="Theme.WeightLoss_Pathway_project" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">#006990</item>
+        <item name="colorPrimaryVariant">#006990</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/black</item>
+        <item name="colorSecondaryVariant">@color/black</item>
         <item name="colorOnSecondary">@color/black</item>
+        <!-- Style -->
+        <item name="android:fontFamily">@font/gothamnights</item>
+        <item name="android:textColor">#006990</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="WeightLoss_style">
-        <item name="android:fontFamily">casual</item>
-        <item name="android:textSize">20sp</item>
-        <item name="android:textColor">#FFFFFF</item>
+    <style name="WeightLoss_main_style">
+        <item name="android:fontFamily">@font/gothamnights</item>
+        <item name="android:textColor">#006990</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -33,6 +37,7 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#77FDED</item>
     </style>
+
     <style name="WeightLossDaysOfTheWeek">
         <item name="android:fontFamily">casual</item>
         <item name="android:textSize">50sp</item>
