Updated Login and User Creation

--- a/app/src/main/res/layout/activity_create_user_credentials.xml
+++ b/app/src/main/res/layout/activity_create_user_credentials.xml
@@ -35,7 +35,7 @@
         tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />
 
     <EditText
-        android:id="@+id/createPassword"
+        android:id="@+id/createPasswordTxt"
         android:layout_width="372dp"
         android:layout_height="48dp"
         android:autofillHints=""
@@ -52,12 +52,12 @@
         app:layout_constraintVertical_bias="0.543" />
 
     <EditText
-        android:id="@+id/createUsername"
+        android:id="@+id/createEmailTxt"
         android:layout_width="372dp"
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/createUsername"
+        android:hint="@string/createEmail"
         android:inputType="textPersonName"
         android:textColor="#006990"
         android:textColorHint="#006990"
