--- a/app/src/main/res/layout/fragment_friday.xml
+++ b/app/src/main/res/layout/fragment_friday.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="#00BCD4"
-    tools:context=".DayOfWeek">
+    tools:context=".Monday">
 
     <ListView
         android:id="@+id/goalsList"
