--- a/app/src/main/res/layout/activity_weekly.xml
+++ b/app/src/main/res/layout/activity_weekly.xml
@@ -34,30 +34,6 @@
         app:layout_constraintVertical_bias="0.946"
         tools:ignore="TextContrastCheck" />
 
-    <Spinner
-        android:id="@+id/weeklyDurationSpinner"
-        android:layout_width="165dp"
-        android:layout_height="48dp"
-        android:contentDescription="@string/weeklyDurationSpinner"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.934"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83" />
-
-    <Spinner
-        android:id="@+id/weeklyIntensitySpinner"
-        android:layout_width="200dp"
-        android:layout_height="48dp"
-        android:contentDescription="@string/weeklyIntensitySpinner"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83" />
-
     <TextView
         android:id="@+id/weeklyNutritionHeader"
         android:layout_width="379dp"
@@ -69,10 +45,9 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.562"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.31" />
+        app:layout_constraintVertical_bias="0.228" />
 
     <EditText
         android:id="@+id/weeklyProteinGoalsTxt"
@@ -87,28 +62,10 @@
         android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.611"
+        app:layout_constraintHorizontal_bias="0.638"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.374" />
-
-    <EditText
-        android:id="@+id/weeklyGrainGoalsTxt"
-        android:layout_width="375dp"
-        android:layout_height="48dp"
-        android:autofillHints=""
-        android:ems="10"
-        android:hint="@string/weeklyGoalTwo"
-        android:inputType="textPersonName"
-        android:textAllCaps="true"
-        android:textColor="#006990"
-        android:textColorHint="#006990"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.611"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.456" />
+        app:layout_constraintVertical_bias="0.297" />
 
     <EditText
         android:id="@+id/weeklyVegetableGoalsTxt"
@@ -123,10 +80,10 @@
         android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.611"
+        app:layout_constraintHorizontal_bias="0.638"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.538" />
+        app:layout_constraintVertical_bias="0.461" />
 
     <EditText
         android:id="@+id/weeklyFruitGoalsTxt"
@@ -141,10 +98,28 @@
         android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.611"
+        app:layout_constraintHorizontal_bias="0.638"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.619" />
+        app:layout_constraintVertical_bias="0.541" />
+
+    <EditText
+        android:id="@+id/weeklyGrainGoalsTxt"
+        android:layout_width="375dp"
+        android:layout_height="48dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/weeklyGoalTwo"
+        android:inputType="textPersonName"
+        android:textAllCaps="true"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.638"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.379" />
 
     <TextView
         android:id="@+id/weeklyFitnessHeader"
@@ -153,13 +128,13 @@
         android:text="@string/weeklyFitnessHeader"
         android:textAlignment="textStart"
         android:textAllCaps="false"
-        android:textColor="#FAF7F7"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.593"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.69" />
+        app:layout_constraintVertical_bias="0.614" />
 
     <TextView
         android:id="@+id/weeklyWelcomeMessage"
@@ -168,53 +143,92 @@
         android:text="@string/weeklyWelcome"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="#FAF7F7"
+        android:textColor="#A1887F"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.718"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.199" />
+        app:layout_constraintVertical_bias="0.055" />
 
-    <ImageView
-        android:id="@+id/loginImgView"
+    <Spinner
+        android:id="@+id/weeklyModeSpinner"
         android:layout_width="366dp"
-        android:layout_height="80dp"
-        android:contentDescription="@string/loginImageDescription"
+        android:layout_height="49dp"
+        android:contentDescription="@string/weeklyModeSpinner"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
+        app:layout_constraintHorizontal_bias="0.644"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.073"
-        app:srcCompat="@drawable/wellness_image"
-        tools:ignore="ImageContrastCheck" />
+        app:layout_constraintVertical_bias="0.696" />
+
+    <Spinner
+        android:id="@+id/weeklyIntensitySpinner"
+        android:layout_width="200dp"
+        android:layout_height="48dp"
+        android:contentDescription="@string/weeklyIntensitySpinner"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.113"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.778" />
+
+    <Spinner
+        android:id="@+id/weeklyDurationSpinner"
+        android:layout_width="165dp"
+        android:layout_height="48dp"
+        android:contentDescription="@string/weeklyDurationSpinner"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.959"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.778" />
 
     <EditText
-        android:id="@+id/weeklyDate"
-        android:layout_width="379dp"
+        android:id="@+id/weeklyTabDateBtn"
+        android:layout_width="306dp"
         android:layout_height="48dp"
-        android:autofillHints=""
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="81dp"
+        android:autofillHints="@string/weeklyTabDateTxt"
+        android:clickable="false"
+        android:cursorVisible="false"
         android:ems="10"
-        android:hint="@string/weeklyDate"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:hint="@string/weeklyTabDateTxt"
         android:inputType="date"
         android:textColor="#006990"
         android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.625"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.245" />
+        app:layout_constraintVertical_bias="0.118" />
 
-    <Spinner
-        android:id="@+id/weeklyModeSpinner"
-        android:layout_width="375dp"
-        android:layout_height="48dp"
-        android:contentDescription="@string/weeklyModeSpinner"
+    <Button
+        android:id="@+id/weeklyTabChooseDateBtn"
+        android:layout_width="61dp"
+        android:layout_height="66dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="6dp"
+        android:contentDescription="@string/createCalendarBtn"
+        app:icon="@drawable/ic_baseline_calendar_month_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.97"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.747" />
+        app:layout_constraintVertical_bias="0.107"
+        tools:ignore="RedundantDescriptionCheck" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
