--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         android:layout_height="48dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/loginUsername"
+        android:hint="@string/loginEmail"
         android:inputType="textPersonName"
         android:textAllCaps="true"
         android:textColor="#006990"
