Authentification update and Database Communication

--- a/app/src/main/res/layout/activity_create_user_credentials.xml
+++ b/app/src/main/res/layout/activity_create_user_credentials.xml
@@ -6,6 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".CreateUserCredentials">
 
+    <EditText
+        android:id="@+id/createUsernameTxt"
+        android:layout_width="372dp"
+        android:layout_height="48dp"
+        android:autofillHints=""
+        android:ems="10"
+        android:hint="@string/createUsername"
+        android:inputType="textPersonName"
+        android:textColor="#006990"
+        android:textColorHint="#006990"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.513" />
+
     <Button
         android:id="@+id/createUserFinishBtn"
         android:layout_width="127dp"
@@ -49,7 +66,7 @@
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.543" />
+        app:layout_constraintVertical_bias="0.606" />
 
     <EditText
         android:id="@+id/createEmailTxt"
@@ -58,7 +75,7 @@
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/createEmail"
-        android:inputType="textPersonName"
+        android:inputType="text"
         android:textColor="#006990"
         android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -66,7 +83,8 @@
         app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.415" />
+        app:layout_constraintVertical_bias="0.415"
+        tools:ignore="TextFields" />
 
     <TextView
         android:id="@+id/createHeaderLbl3"
