--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,8 +17,22 @@
         app:layout_constraintHorizontal_bias="0.82"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88"
+        app:layout_constraintVertical_bias="0.917"
         tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />
+
+    <Button
+        android:id="@+id/loginSignInBtn"
+        android:layout_width="127dp"
+        android:layout_height="53dp"
+        android:backgroundTint="#FF018786"
+        android:text="@string/loginSignIn"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.917"
+        tools:ignore="TextContrastCheck" />
 
     <EditText
         android:id="@+id/loginUserTxt"
@@ -33,12 +47,12 @@
         android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.392"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.56" />
+        app:layout_constraintVertical_bias="0.519" />
 
     <TextView
+        android:id="@+id/textView"
         style="@style/WeightLoss_title"
         android:layout_width="331dp"
         android:layout_height="160dp"
@@ -66,20 +80,6 @@
         app:layout_constraintVertical_bias="0.046"
         app:srcCompat="@drawable/wellness_image" />
 
-    <Button
-        android:id="@+id/loginSignInBtn"
-        android:layout_width="127dp"
-        android:layout_height="53dp"
-        android:backgroundTint="#FF018786"
-        android:text="@string/loginSignIn"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.14"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.88"
-        tools:ignore="TextContrastCheck" />
-
     <EditText
         android:id="@+id/loginPasswordTxt"
         android:layout_width="327dp"
@@ -94,9 +94,35 @@
         android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.392"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.685" />
+        app:layout_constraintVertical_bias="0.61" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="327dp"
+        android:layout_height="48dp"
+        android:contentDescription="@string/loginFacebook"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.699"
+        app:srcCompat="@drawable/fui_ic_facebook_white_22dp" />
+
+    <ImageButton
+        android:id="@+id/loginGoogleBtn"
+        android:layout_width="327dp"
+        android:layout_height="48dp"
+        android:contentDescription="@string/loginGoogle"
+        android:minHeight="48dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.784"
+        app:srcCompat="@drawable/fui_ic_googleg_color_24dp"
+        tools:ignore="ImageContrastCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
