--- a/app/src/main/res/layout/activity_weekly_tab.xml
+++ b/app/src/main/res/layout/activity_weekly_tab.xml
@@ -10,14 +10,33 @@
     app:layout_constraintTop_toTopOf="parent"
     tools:context=".WeeklyTab">
 
+    <Button
+        android:id="@+id/weeklyTabDateSubmitBtn"
+        android:layout_width="100dp"
+        android:layout_height="66dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="@string/createCalendarBtn"
+        android:text="@string/weeklyTabSubmit"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.954"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.66"
+        tools:ignore="RedundantDescriptionCheck,DuplicateSpeakableTextCheck" />
+
     <EditText
-        android:id="@+id/weeklyTabDateBtn"
-        android:layout_width="306dp"
+        android:id="@+id/weeklyTabDateTxt"
+        android:layout_width="200dp"
         android:layout_height="48dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="14dp"
-        android:layout_marginEnd="81dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="199dp"
         android:autofillHints="@string/weeklyTabDateTxt"
         android:clickable="false"
         android:cursorVisible="false"
@@ -36,13 +55,13 @@
         app:layout_constraintVertical_bias="0.669" />
 
     <Button
-        android:id="@+id/weeklyTabChooseDateBtn"
+        android:id="@+id/weeklyTabDateBtn"
         android:layout_width="61dp"
         android:layout_height="66dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="6dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="125dp"
         android:contentDescription="@string/createCalendarBtn"
         app:icon="@drawable/ic_baseline_calendar_month_24"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,8 +80,8 @@
         android:layout_marginTop="75dp"
         android:background="#006990"
         android:contentDescription="@string/TabDescription"
-        app:tabSelectedTextColor="#FFFFFF"
-        app:tabTextColor="#FFFFFF"></com.google.android.material.tabs.TabLayout>
+        app:tabSelectedTextColor="#000000"
+        app:tabTextColor="#FFFFFF" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
