--- a/app/src/main/res/layout/fragment_monday.xml
+++ b/app/src/main/res/layout/fragment_monday.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragMonday"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:backgroundTint="#00BCD4"
@@ -10,6 +11,5 @@
         android:id="@+id/goalsList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:background="#00BCD4" />
+        android:layout_gravity="bottom" />
 </FrameLayout>
