--- a/app/src/main/res/layout/activity_weekly_tab.xml
+++ b/app/src/main/res/layout/activity_weekly_tab.xml
@@ -85,19 +85,31 @@
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_height="462dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="125dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginBottom="-16dp"
+        android:layout_marginStart="-1dp"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="145dp"
         android:contentDescription="@string/AdapterTab"
         tools:layout_editor_absoluteX="8dp">
 
     </androidx.viewpager.widget.ViewPager>
+
+    <Button
+        android:id="@+id/weeklyTabBackBtn"
+        android:layout_width="159dp"
+        android:layout_height="69dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="125dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginBottom="35dp"
+        android:text="@string/personalizeGoalWeeklyBack" />
 
 </RelativeLayout>
