--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFFF0000</color>
+    <color name="orange">#FFFFA500</color>
+    <color name="yellow">#FFF9DB24</color>
+    <color name="blue">#FF006990</color>
+    <color name="green">#FF006400</color>
+    <color name="purple">#FF3700B3</color>
 </resources>
