--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,10 +13,10 @@
         android:text="@string/loginCreateAccount"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
+        app:layout_constraintHorizontal_bias="0.859"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.917"
+        app:layout_constraintVertical_bias="0.895"
         tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />
 
     <Button
@@ -26,10 +26,10 @@
         android:text="@string/loginSignIn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.137"
+        app:layout_constraintHorizontal_bias="0.14"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.917"
+        app:layout_constraintVertical_bias="0.895"
         tools:ignore="TextContrastCheck" />
 
     <EditText
@@ -41,8 +41,6 @@
         android:hint="@string/loginEmail"
         android:inputType="textPersonName"
         android:textAllCaps="true"
-        android:textColor="#006990"
-        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +48,7 @@
         app:layout_constraintVertical_bias="0.519" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/loginTitleLbl"
         style="@style/WeightLoss_title"
         android:layout_width="331dp"
         android:layout_height="160dp"
@@ -59,7 +57,6 @@
         android:hint="@string/loginUsername"
         android:text="@string/loginWelcome"
         android:textAlignment="center"
-        android:textColor="#006990"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,8 +85,6 @@
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:textAllCaps="true"
-        android:textColor="#006990"
-        android:textColorHint="#006990"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -101,6 +96,7 @@
         android:layout_width="327dp"
         android:layout_height="48dp"
         android:contentDescription="@string/loginFacebook"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -115,6 +111,7 @@
         android:layout_height="48dp"
         android:contentDescription="@string/loginGoogle"
         android:minHeight="48dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,5 +119,20 @@
         app:layout_constraintVertical_bias="0.784"
         app:srcCompat="@drawable/fui_ic_googleg_color_24dp"
         tools:ignore="ImageContrastCheck" />
+
+    <Button
+        android:id="@+id/loginHelpBtn"
+        android:layout_width="48dp"
+        android:layout_height="52dp"
+        app:icon="@drawable/ic_baseline_help_24"
+        app:iconGravity="textStart"
+        app:iconPadding="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.895"
+        tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
